--- a/app/views/mentors/create.html.erb
+++ b/app/views/mentors/create.html.erb
@@ -2,18 +2,44 @@
 <div>
 <div class="parentLanding">
     <div class="childLanding">
-    	<br>
-    	<br>
-    	<br>
-    	<br>   
-        <img src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-lowercase-white.png" />
+        <br>
+        <br>   
+        <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
         <br>
-   		<br>
-        <h1 class="text-center">Thank you! <br><br> 
-        	We'll email you when access becomes available!</h1>
         <br>
-   
-	</div>
+        <br>
+        <h1 class="text-center">Thank you! 
+        <br>
+        <br>
+        <br>
+        <h3>With AdviceShare you'll join a strong community of people who've found a better way to help others.<br> Please share on Facebook and Twitter!</h3>
+        <br>
+        <br>
+        <br>   
+        </h1>
+
+
+<!--Facebook Script -->
+<div class="headerlinks" style="margin-left: -7px;">
+<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AS_Favicon.png&p[title]=AdviceShare&p[summary]=I%20just%20signed%20up%20to%20became%20a%20mentor%20for%20AdviceShare,%20an%20easier%20way%20for%20me%20to%20give%20back%20and%20help%20others%20looking%20to%20pursue%20a%20similar%20path!">
+    <div class="socialmedia">
+    <img src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/FB-f-Logo__blue_100.png" />
+    <br>
+    <br>
+    </div>
+</a>
+
+<!--Twitter Script -->
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up to became a mentor for @AdviceShare, an easier way for me to give back and help others looking to pursue a similar path!" data-size="large" data-count="none" data-hashtags="GetAhead">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</div>
+
+
+
+        <br>
+    </div>
 </div>
