Update landing page text

--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -38,7 +38,7 @@
       	<div class="clearfix content-heading explainergraphics space2and3">
           	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(4).png"/>
           <h4 class="getridofspaceatbottom">We'll connect you.</h4>
-          <small class="changesmallfont">We'll find an AdviceShare mentor who wants to offer advice.</small>
+          <small class="changesmallfont">We'll find an AdviceShare mentor who wants to offer their insights.</small>
       	</div>
       	<div class="clearfix content-heading explainergraphics">
           <img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(3).png"/>
