--- a/app/views/earlysignups/new.html.erb
+++ b/app/views/earlysignups/new.html.erb
@@ -62,9 +62,11 @@
 		  <%= simple_form_for @earlysignup, :html => {:class => 'form-inline' } do |f| %>
 			<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
 		    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
+        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
+
+        <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
 		    <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
-		      <%= f.button :submit, 'Sign Up for Early Access', :class=> "btn btn-large btn-primary" %>
-		  <% end %>  
+ 
       <%= render 'signups/becomementor' %>
 
       </div>
@@ -75,6 +77,15 @@
   	<div class="signupparent">
       <div class="signupparentchild">
 
+<%= simple_form_for @earlysignup, :html => {:class => 'form-inline' } do |f| %>
+      <%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
+        <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
+        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
+
+        <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
+        <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
+          <%= f.button :submit, 'Sign Up for Early Access', :class=> "btn btn-large btn-primary" %>
+      <% end %> 
       </div>
     </div>
   </div>
