--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -2,60 +2,61 @@
 <div>
 <div class="parentLanding">
     <div class="childLanding">
-    	
+      
         <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
         <h4 class="text-center">Thank you for your interest in becoming an AdviceShare mentor.<br>Share some details with us below!</h4>
         <br>
-	
-	</div>
+  
+  </div>
 </div>
 <div class="row">
 
 
 <div class="moveleft">
   <div class="span5">
-  	<div class="signupparent">
+    <div class="signupparent">
       <div class="signupparentchild">
           
         <h3 class="text-center">Why become a mentor?</h3>
-		<h4 class="text-left">
+    <h4 class="text-left">
 
-		<div class="clearfix content-heading explainergraphics withleftmargin">
+    <div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom pulltextup">No regular commitment.</h4>
           <small class="changesmallfont">We know your busy, and your schedule is unpredictable. So we'll only ask you to help whenever you're available.<br></br></small>
-      	</div>
-      	<div class="clearfix content-heading explainergraphics withleftmargin">
+        </div>
+        <div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom">Your preferences.</h4>
           <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater with GPAs at a certain level? We'll take note and do our best to make it happen.<br><br></small>
 
-      	</div>
-      	<div class="clearfix content-heading explainergraphics withleftmargin">
+        </div>
+        <div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom">Your own personal assistant.</h4>
           <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time to chat.<br><br></small>
-      	</div>
+        </div>
 
       </div>
     </div>
 
   </div>
-  	
- </div> 	
+    
+ </div>   
 
   <div class="span3">
-  	<div class="signupparent">
+    <div class="signupparent">
       <div class="signupparentchild">
 
-		  <%= simple_form_for @mentor, :html => {:class => 'form-inline' } do |f| %>
-			<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px;'} %>
+      <%= simple_form_for @mentor, :html => {:class => 'form-inline' } do |f| %>
+      <%= f.input :name, :label => "", :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px;'} %>
+        
+      <%= f.input :email, :label => "", :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px;'} %>
 
-		    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px;'} %>
+        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
 
+        <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
 
-        <%= f.input :education, :label => "", :as => :text, :required => true, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
-
-        <%= f.input :job, :label => "", :as => :text, :required => true, :placeholder => 'Current employer and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
+        <%= f.input :preferences, :label => "", :as => :text, :placeholder => 'What type of people do you prefer to speak to? The more details you provide, the better we will be able to match you!', :input_html => {:rows => 10, style: 'width:290px; height: 100px; ;'} %>
 
       <% end %> 
 
@@ -65,15 +66,16 @@
 
 
   <div class="span3 offset1">
-  	<div class="signupparent">
+    <div class="signupparent">
       <div class="signupparentchild">
 
         <%= simple_form_for @mentor, :html => {:class => 'form-inline' } do |f| %>
-        <%= f.input :jobresponsibilities, :label => "", :as => :text, :required => true, :placeholder => 'Please briefly describe your responsibilities in your current role.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
 
-        <%= f.input :expertise, :label => "", :as => :text, :required => true, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
+        <%= f.input :education, :label => "", :as => :text, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
 
-        <%= f.input :preferences, :label => "", :as => :text, :required => true, :placeholder => 'What type of people do you prefer to speak to? The more details you provide, the better we will be able to match you!', :input_html => {:rows => 10, style: 'width:290px; height: 100px; ;'} %>
+        <%= f.input :job, :label => "", :as => :text, :placeholder => 'Current employer and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
+
+        <%= f.input :jobresponsibilities, :label => "", :as => :text, :placeholder => 'Please briefly describe your responsibilities in your current role.', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
 
           <%= f.button :submit, 'Become a Mentor!', :class=> "btn btn-large btn-primary" %>
       <% end %>  
@@ -84,10 +86,11 @@
   
 </div>
 
+
+
 <div class="buttonLanding">
     <div class="childLanding">
 
         <small>© 2013 AdviceShare. All rights reserved.</small>
-	</div>
+  </div>
 </div>
-
