Update Mentor View

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,11 @@
 
 @import "bootstrap-responsive";
 
+.formshit{
+  width: 135px; 
+  height: 30px;
+}
+
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
