--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -52,7 +52,7 @@
         
       <%= f.input :email, :label => "", :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px;'} %>
 
-        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
+        <%= f.input :linkedin, :label => "", :collection => ['Is your LinkedIn profile complete?','Yes','No'], :selected => 'Is your LinkedIn profile complete?', :input_html => {style: 'margin-left: -85px;'} %>
 
         <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
 
