--- a/app/views/earlysignups/new.html.erb
+++ b/app/views/earlysignups/new.html.erb
@@ -2,103 +2,99 @@
 <div>
 <div class="parentLanding">
     <div class="childLanding">
-    	<br>
-    	<br>   
+      
         <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
-   
-        <h2 class="text-center">An easier way to get the advice you're looking for.</h2>
+        <h4 class="text-center">Thank you for your interest in becoming an AdviceShare mentor.<br>Share some details with us below!</h4>
         <br>
-   
-     <div class="">
-        <h4 class="text-center">AdviceShare provides professional and academic advice from accomplished people, helping you get closer to your goals, while saving time along the way.</h4>
-        <br>
-   	</div>
-	
-	</div>
+  </div>
 </div>
 <div class="row">
 
 
 <div class="moveleft">
-  <div class="span5 offset2">
-  	<div class="signupparent">
+  <div class="span5">
+    <div class="signupparent">
       <div class="signupparentchild">
           
-        <h1 class="text-center"></h1>
-        <br>
-		<h4 class="text-left">
+        <h3 class="text-center">Why become a mentor?</h3>
+    <h4 class="text-left">
 
-		<div class="clearfix content-heading explainergraphics">
-          <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png"/>
-          <h4 class="getridofspaceatbottom pulltextup">Tell us what advice you need.</h4>
-          <small class="changesmallfont">You tell us what type of advice you're looking for.</small>
-      	</div>
-      	<div class="clearfix content-heading explainergraphics space2and3">
-          	<img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(4).png"/>
-          <h4 class="getridofspaceatbottom">We'll connect you</h4>
-          <small class="changesmallfont">We'll provide you with insights with those who have been in your shoes, and want to help.</small>
-      	</div>
-      	<div class="clearfix content-heading explainergraphics">
-          <img class="pull-left pushpicturedownmore withrightmargin" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(3).png"/>
-          <h4 class="getridofspaceatbottom">Save Time. Avoid the hassle.</h4>
-          <small class="changesmallfont">You avoid the hassle of emailing strangers, coordinating schedules, and doing tons of google searches.</small>
-      	</div>
+    <div class="clearfix content-heading explainergraphics withleftmargin">
+          <h4 class="getridofspaceatbottom pulltextup">No regular commitment.</h4>
+          <small class="changesmallfont">We know your busy, and your schedule is unpredictable. So we'll only ask you to help whenever you're available.<br></br></small>
+        </div>
+        <div class="clearfix content-heading explainergraphics withleftmargin">
+          <h4 class="getridofspaceatbottom">Your preferences.</h4>
+          <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater with GPAs at a certain level? We'll take note and do our best to make it happen.<br><br></small>
+
+        </div>
+        <div class="clearfix content-heading explainergraphics withleftmargin">
+          <h4 class="getridofspaceatbottom">Your own personal assistant.</h4>
+          <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time to chat.<br><br></small>
+        </div>
 
       </div>
     </div>
 
   </div>
-  	
- </div> 	
+    
+ </div>   
+
+      <%= simple_form_for @earlysignup, :html => {:class => 'form-inline' } do |f| %>
 
   <div class="span3">
-  	<div class="signupparent">
+    <div class="signupparent">
       <div class="signupparentchild">
 
-      	  <h1 class="text-center"></h1>
+      <!-- <%= f.input :_ do %> 
+        <%= f.input_field :name, :style => "width:135px; height: 30px;", :placeholder => 'Name' %>
+        <%= f.input_field :email, :style => "width:195px; height: 30px;",:placeholder => 'Email' %>
+      <% end %> -->  
+      <%= f.input :name, :label => "", :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px;'} %>
+        
+      <%= f.input :email, :label => "", :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px;'} %>
 
-		  <%= simple_form_for @earlysignup, :html => {:class => 'form-inline' } do |f| %>
-			<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
-		    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
-        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
+        <%= f.input :linkedin, :label => "", :collection => ['Is your LinkedIn profile complete?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'width:290px; margin-left: -13px;'} %>
+        <h6 class="text-left" style="margin-bottom: 8px;">*Note: A complete profile includes up-to-date descriptions of your job and responsibilities</h6>
 
         <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
-		    <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
- 
-      <%= render 'signups/becomementor' %>
 
       </div>
     </div>
   </div>
 
-  <div class="span1">
-  	<div class="signupparent">
+
+  <div class="span3 offset1">
+    <div class="signupparent">
       <div class="signupparentchild">
 
-<%= simple_form_for @earlysignup, :html => {:class => 'form-inline' } do |f| %>
-      <%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
-        <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
-        <%= f.input :linkedin, :label => "", :collection => ['Are you on LinkedIn?','Yes','No'], :selected => 'Are you on LinkedIn?', :input_html => {style: 'margin-left: -85px;'} %>
+        <%= f.input :preferences, :label => "", :as => :text, :placeholder => 'What type of people do you prefer to speak to? The more details you provide, the better we will be able to match you!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ; margin-bottom: px;'} %>
+        
+        <h6 class="text-left" style="margin-bottom: -10px;">*Skip the fields and click "Become a mentor!" if you have a complete LinkedIn profile*</h6>
+        <%= f.input :education, :label => "", :as => :text, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 60px; margin-bottom: -10px;'} %>
 
-        <%= f.input :expertise, :label => "", :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (ex: Consulting, Investment Banking, Teach for America, etc.)', :input_html => {:rows => 15, style: 'width:290px; height: 100px; ;'} %>
-        <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ;'} %>
-          <%= f.button :submit, 'Sign Up for Early Access', :class=> "btn btn-large btn-primary" %>
-      <% end %> 
+        <%= f.input :job, :label => "", :as => :text, :placeholder => 'Current employer and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 30px; margin-bottom: -10px;'} %>
+
+        <%= f.input :jobresponsibilities, :label => "", :as => :text, :placeholder => 'Please briefly describe your responsibilities in your current role.', :input_html => {:rows => 10, style: 'width:290px; height: 50px; margin-bottom: 15px;'} %>
+        
+        <%= f.button :submit, 'Become a Mentor!', :class=> "btn btn-large btn-primary", :input_html => {style: 'margin-top: 10px;'} %>
+   
+
       </div>
     </div>
   </div>
-  
+
+  <% end %>  
+     
 </div>
+
+
 
 <div class="buttonLanding">
     <div class="childLanding">
-        <br>
-        <br>
-        <br>
-        <br>
-        <small>© 2013 AdviceShare. All rights reserved.</small>
-	</div>
-</div>
 
+        <small>© 2013 AdviceShare. All rights reserved.</small>
+  </div>
+</div>
