Update Mentor Create Views

--- a/app/views/earlysignups/create.html.erb
+++ b/app/views/earlysignups/create.html.erb
@@ -13,11 +13,9 @@
         <h1 class="text-center">Thank you! 
         <br>
         <br>
-        <br>
-        <h3>With AdviceShare you'll join a strong community of people who've found a better way to help others.<br> Please share on Facebook and Twitter!</h3>
-        <br>
-        <br>
-        <br>   
+        <h4>With AdviceShare you'll join a strong community of people who have found a better, easier way to help others.</h4><br><br>
+        <h3> Please help us spread the word by clicking below!</h3>
+        <br>  
         </h1>
 
 
@@ -33,7 +31,7 @@
 
 <!--Twitter Script -->
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up to became a mentor for @AdviceShare, an easier way for me to give back and help others looking to pursue a similar path!" data-size="large" data-count="none" data-hashtags="GetAhead">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AdviceShare.co" data-text="I just signed up to became a mentor for @AdviceShare, an easier way for me to give back and help others!" data-size="large" data-count="none" data-hashtags="">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </div>
