--- a/app/views/mentors/create.html.erb
+++ b/app/views/mentors/create.html.erb
@@ -14,7 +14,8 @@
         <br>
         <br>
         <br>
-        <h3>With AdviceShare you'll join a strong community of people who've found a better way to help others.<br> Please share on Facebook and Twitter!</h3>
+        <h4>With AdviceShare you'll join a strong community of people who have found a better, easier way to help others.</h4><br><br>
+        <h3> Please share on Facebook and Twitter!</h3>
         <br>
         <br>
         <br>   
