--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -42,6 +42,19 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 </script>
 
+<script type="text/javascript">
+function trackOutboundLink(link, category, action) { 
+ 
+try { 
+_gaq.push(['_trackEvent', category , action]); 
+} catch(err){}
+ 
+setTimeout(function() {
+document.location.href = link.href;
+}, 100);
+}
+</script>
+
 <%= favicon_link_tag 'AS_Favicon.png' %>
   </head>
   <body>
