--- a/app/views/advisors/create.html.erb
+++ b/app/views/advisors/create.html.erb
@@ -21,7 +21,7 @@
 
 <!--Facebook Script -->
 <div class="headerlinks" style="margin-left: -7px;">
-<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AS_Favicon.png&p[title]=AdviceShare&p[summary]=I%20just%20signed%20up%20to%20became%20an%20advisor%20for%20AdviceShare,%20an%20easier%20way%20for%20me%20to%20give%20back%20and%20help%20others%20looking%20to%20pursue%20a%20similar%20path!">
+<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AS_Favicon.png&p[title]=AdviceShare&p[summary]=I%20just%20signed%20up%20to%20become%20an%20advisor%20for%20@AdviceShare,%20an%20easier%20way%20for%20me%20to%20give%20back%20and%20help%20others%20looking%20to%20pursue%20a%20similar%20path!" target="_blank">
     <div class="socialmedia">
     <img src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/FB-f-Logo__blue_100.png" />
     <br>
