Update advisor signup form

--- a/app/views/advisors/new.html.erb
+++ b/app/views/advisors/new.html.erb
@@ -75,7 +75,7 @@
         <h6 class="text-left" style="margin-bottom: -10px;">*Skip these fields if you have a complete LinkedIn profile and click "Become an Advisor!"</h6>
         <%= f.input :education, :label => ".", :as => :text, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 60px; margin-bottom: -10px;'} %>
 
-        <%= f.input :job, :label => ".", :as => :text, :placeholder => 'Current employer and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 30px; margin-bottom: -10px;'} %>
+        <%= f.input :job, :label => ".", :as => :text, :placeholder => 'Current employer/university and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 30px; margin-bottom: -10px;'} %>
 
         <%= f.input :Job_Responsibilities, :label => ".", :as => :text, :placeholder => 'Please briefly describe your responsibilities in your current role.', :input_html => {:rows => 10, style: 'width:290px; height: 50px; margin-bottom: 15px;'} %>
         
