--- a/app/views/advisors/new.html.erb
+++ b/app/views/advisors/new.html.erb
@@ -6,7 +6,7 @@
         <%= render 'signups/whiteASLogo' %>
         <br>
         <br>
-        <h4 class="text-center">Thank you for your interest in becoming an AdviceShare advisor.<br>Share some details with us below!</h4>
+        <h4 class="text-center">Thank you for your interest in becoming an AdviceShare adviser.<br>Share some details with us below!</h4>
         <br>
   </div>
 </div>
@@ -18,7 +18,7 @@
     <div class="signupparent">
       <div class="signupparentchild">
           
-        <h3 class="text-center">Why become an advisor?</h3>
+        <h3 class="text-center">Why become an adviser?</h3>
     <h4 class="text-left">
 
     <div class="clearfix content-heading explainergraphics withleftmargin">
@@ -72,14 +72,14 @@
 
         <%= f.input :preferences, :label => "", :required => true, :as => :text, :placeholder => 'What type of people do you prefer to speak to? The more details you provide, the better we will be able to match you!', :input_html => {:rows => 10, style: 'width:290px; height: 75px; ; margin-bottom: px;'} %>
         
-        <h6 class="text-left" style="margin-bottom: -10px;">*Skip these fields if you have a complete LinkedIn profile and click "Become an Advisor!"</h6>
+        <h6 class="text-left" style="margin-bottom: -10px;">*Skip these fields if you have a complete LinkedIn profile and click "Become an Adviser!"</h6>
         <%= f.input :education, :label => ".", :as => :text, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 60px; margin-bottom: -10px;'} %>
 
         <%= f.input :job, :label => ".", :as => :text, :placeholder => 'Current employer/university and your title.', :input_html => {:rows => 10, style: 'width:290px; height: 30px; margin-bottom: -10px;'} %>
 
         <%= f.input :Job_Responsibilities, :label => ".", :as => :text, :placeholder => 'Please briefly describe your responsibilities in your current role.', :input_html => {:rows => 10, style: 'width:290px; height: 50px; margin-bottom: 15px;'} %>
         
-        <%= f.button :submit, 'Become an Advisor!', :class=> "btn btn-large btn-primary", :input_html => {style: 'margin-top: 10px;'} %>
+        <%= f.button :submit, 'Become an Adviser!', :class=> "btn btn-large btn-primary", :input_html => {style: 'margin-top: 10px;'} %>
    
 
       </div>
