--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <script type='text/javascript' src='https://s3.amazonaws.com/AdviceShare/jquery.html5-placeholder-shim.js'></script>
     <%= render 'layouts/shim' %>
 
 <script>
