--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -29,6 +29,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+      <script type='text/javascript' src='https://s3.amazonaws.com/AdviceShare/jquery.html5-placeholder-shim.js'></script>
     <%= render 'layouts/shim' %>
 
 <script>
