--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>© 2013
-    <a href="http://AdviceShare.org/">AdviceShare</a>
+    <a href="http://AdviceShare.co/">AdviceShare</a>
      . All rights reserved.
   </small>
   <nav>
