--- a/app/views/layouts/_landingpagefooter.html.erb
+++ b/app/views/layouts/_landingpagefooter.html.erb
@@ -2,7 +2,7 @@
     <div class="childLanding">
         <br>
         <br>
-        <a class="headerlinks" href="http://blog.adviceshare.co/" onClick="trackOutboundLink(this, 'Outbound Links', 'blog.AdviceShare.co'); return false;">Blog</a>
+        <a><%= link_to "Blog", blog_path, class: 'headerlinks' %></a>
         <small>  |  <small>© 2013 <a class="headerlinks" href="mailto:general@AdviceShare.co">AdviceShare</a>. All rights reserved.</small>
 	</div>
 </div>
