--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,4 +5,11 @@
   <a href="http://AdviceShare.co/">AdviceShare</a>
 </p>
 
+<% @blogsignup ||= Blogsignup.new %>
 
+<%= simple_form_for @blogsignup, :html => {:class => 'form-inline' } do |f| %>
+	<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
+    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:290px; height: 30px; margin-bottom: -20px;'} %>
+    <%= f.input :message, :label => "", :as => :text, :required => true, :placeholder => 'Tell us what type of advice you are looking for!', :input_html => {:rows => 10, style: 'width:290px; height: 30px; ;'} %>
+     <%= f.button :submit, 'Sign Up for Early Access', :class=> "btn btn-large btn-primary" %>
+<% end %> 
