put CSS in custom

--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -51,6 +51,14 @@ html,body {
   right:250px;*/
 }
 
+.headerlinks{
+  color: #404040 !important;
+  margin-left: px; 
+/*  position:fixed;
+  top:60px;
+  right:250px;*/
+}
+
 .nav .pull-right{
     margin-right: px;
     color: #909090 !important;
