--- a/app/assets/stylesheets/blogsignups.css.scss
+++ b/app/assets/stylesheets/blogsignups.css.scss
@@ -105,7 +105,7 @@ IMG.blogpostimage {
 .formSubText{
   color: #00aced !important;
 }
-.btn.btn-large.btn-primary{
+.btn.btn-large.btn-primary-blog{
   background-color: #00aced;
   background-image: none;
   margin-left: 50px;
