--- a/app/views/blogsignups/_blogSignups.html.erb
+++ b/app/views/blogsignups/_blogSignups.html.erb
@@ -16,7 +16,7 @@
 						<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:200px; height: 30px; margin-bottom: -20px;'} %>
 					    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:200px; height: 30px; margin-bottom: -px;'} %>
 					    </div>
-					     <%= f.button :submit, 'Join us!', :class=> "btn btn-large btn-primary" %>
+					     <%= f.button :submit, 'Join us!', :class=> "btn btn-large btn-primary-blog" %>
 					<% end %>
 				
 		  </div>
