--- a/app/views/layouts/_blogheader.html.erb
+++ b/app/views/layouts/_blogheader.html.erb
@@ -5,7 +5,7 @@
   <div class="navbar-inner">
   	<div class="blogheader">
     <div class="container-fluid">
-      <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-big-green.png"), blog_path, :id => "logo", :class =>"positionAS" %>
+      <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AS+Favicon+w%3A+Full+Text.png"), blog_path, :id => "logo", :class =>"positionAS" %>
       <ul class="nav pull-right">
 			<%= link_to "What is AdviceShare?", root_path, class: 'headerlinks, pull-right' %>
 			</ul>
