--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,7 +71,7 @@ html,body {
 .btn.btn-large.btn-primary{
   background-color: #00aced;
   background-image: none;
-  margin-left: -20px;
+  margin-left: px;
   padding: 18px 28px;
   font-size: 22px;
     line-height: normal;
