--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -59,6 +59,11 @@ document.location.href = link.href;
 <%= favicon_link_tag 'AS_Favicon.png' %>
   </head>
   <body>
+      <!-- ClickTale Top part -->
+        <script type="text/javascript">
+        var WRInitTime=(new Date()).getTime();
+        </script>
+      <!-- ClickTale end of Top part -->
     <div class="container">
       <% flash.each do |name, msg| %>
         <%= content_tag(:div, msg, class: "alert alert-info") %>
@@ -66,6 +71,24 @@ document.location.href = link.href;
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+      
+    <!-- ClickTale Bottom part -->
+
+    <script type='text/javascript'>
+    // The ClickTale Balkan Tracking Code may be programmatically customized using hooks:
+    // 
+    //   function ClickTalePreRecordingHook() { /* place your customized code here */  }
+    //
+    // For details about ClickTale hooks, please consult the wiki page http://wiki.clicktale.com/Article/Customizing_code_version_2
+
+    document.write(unescape("%3Cscript%20src='"+
+    (document.location.protocol=='https:'?
+    "https://clicktalecdn.sslcs.cdngc.net/www07/ptc/a7eb6436-e724-4ac5-b237-d9b1ce8062e0.js":
+    "http://cdn.clicktale.net/www07/ptc/a7eb6436-e724-4ac5-b237-d9b1ce8062e0.js")+"'%20type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+    <!-- ClickTale end of Bottom part -->
+
   </body>
 </html>
 
