--- a/app/views/blogsignups/_blogShareSignupsComments.html.erb
+++ b/app/views/blogsignups/_blogShareSignupsComments.html.erb
@@ -2,7 +2,8 @@
 <div style="text-align: center;">
   <div style="display: inline-block; text-align: left;">
   	<!-- AddThis Button BEGIN -->
-		<div class="addthis_default_style addthis_32x32_style">
+		<div class="addthis_default_style addthis_32x32_style"
+		addthis:description="DOES IT ACTUALLY POST THIS?">
 			<a class="addthis_button_twitter"></a>
 			<a class="addthis_button_facebook"></a>
 			<a class="addthis_button_reddit"></a>
@@ -27,8 +28,8 @@
   <div class="span8 formBackground">
 	  <div style="text-align: center;">
 
-			<h3 class="text-center formMainText">From "ugh" to "yes!", we're sharing everything we learned in securing highly coveted opportunities.</h3>
-	    <h3 class="text-center formSubText">Sign up below to get our posts before anyone else!</h3>
+			<h2 class="text-center formMainText">From "ugh" to "yes!", we're sharing everything we learned in securing highly coveted opportunities.</h2>
+	    <h2 class="text-center formSubText">We've learned a lot and so will you.</h2>
 		  <div style="display: inline-block; text-align: left;">
 		  	 <% @blogsignup ||= Blogsignup.new %>
 					<%= simple_form_for @blogsignup, :html => {:class => 'form-inline' } do |f| %>
@@ -36,7 +37,7 @@
 						<%= f.input :name, :label => "", :required => true, :placeholder => 'Name', :input_html => {style: 'width:200px; height: 30px; margin-bottom: -20px;'} %>
 					    <%= f.input :email, :label => "", :required => true, :placeholder => 'Email', :input_html => {style: 'width:200px; height: 30px; margin-bottom: -px;'} %>
 					    </div>
-					     <%= f.button :submit, 'Join us!', :class=> "btn btn-large btn-primary" %>
+					     <%= f.button :submit, 'Join us!', :class=> "btn btn-large btn-primary-blog" %>
 					<% end %>
 				
 		  </div>
