--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <meta property="og:title" content="AdviceShare" />
+    <meta property="og:url" content="www.AdviceShare.co" />
+    <meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
+    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicon.png" />
+
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag "blogposts", media: "all",
                                            "data-turbolinks-track" => true %>
@@ -25,12 +31,35 @@
 <%= favicon_link_tag 'AS_Favicon.png' %>
   </head>
   <body>
+    <!-- ClickTale Top part -->
+      <script type="text/javascript">
+      var WRInitTime=(new Date()).getTime();
+      </script>
+    <!-- ClickTale end of Top part -->
     <%= render 'layouts/blogheader' %>
     <div class="container">
       <%= yield %>
       <%= render 'blogsignups/blogfooter' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+
+    <!-- ClickTale Bottom part -->
+
+    <script type='text/javascript'>
+    // The ClickTale Balkan Tracking Code may be programmatically customized using hooks:
+    // 
+    //   function ClickTalePreRecordingHook() { /* place your customized code here */  }
+    //
+    // For details about ClickTale hooks, please consult the wiki page http://wiki.clicktale.com/Article/Customizing_code_version_2
+
+    document.write(unescape("%3Cscript%20src='"+
+    (document.location.protocol=='https:'?
+    "https://clicktalecdn.sslcs.cdngc.net/www07/ptc/a7eb6436-e724-4ac5-b237-d9b1ce8062e0.js":
+    "http://cdn.clicktale.net/www07/ptc/a7eb6436-e724-4ac5-b237-d9b1ce8062e0.js")+"'%20type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+    <!-- ClickTale end of Bottom part -->
+
   </body>
 </html>
 
