Create first blog post

--- a/app/views/blogposts/blogPostHomePageTemplate.html.erb
+++ b/app/views/blogposts/blogPostHomePageTemplate.html.erb
@@ -3,7 +3,7 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-   <a href="http://AdviceShare.co/blog/"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-big-green.png" /></a>
+   <a href="http://AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-big-green.png" /></a>
 </div>
 
 <!--Put Blog post title here-->
@@ -13,7 +13,7 @@
   </div>
 
   <div class="span6">
-    <h1 class="text-center"><%= link_to "First Blogpost Goes Here", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This" %></h1>
+    <h1 class="text-center"><%= link_to "How we landed highly coveted opportunities", "http://www.AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities", class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span3">
