--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, 'Blog') %>
+<% provide(:title, 'How we landed the following highly coveted opportunities') %>
 
 <!--Put picture for post here -->
 <br>
 <div class="row">
-   <a href="http://AdviceShare.co/blog/"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-big-green.png" /></a>
+  <a href="http://AdviceShare.co/blog/"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Chest+treasure.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
@@ -13,7 +13,7 @@
   </div>
 
   <div class="span8">
-    <h1 class="text-center"><%= link_to "The type of stuff we're blogging about", "http://www.AdviceShare.co/blog/I-Am-Calling-This-Page-This" %></h1>
+    <h1 class="text-center"><%= link_to "How we landed these highly coveted opportunities", blog_path, class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span2">
