--- a/app/views/blogsignups/_blogShareSignupsComments.html.erb
+++ b/app/views/blogsignups/_blogShareSignupsComments.html.erb
@@ -4,12 +4,20 @@
   	<!-- AddThis Button BEGIN -->
 		<div class="addthis_default_style addthis_32x32_style"
 		addthis:description="DOES IT ACTUALLY POST THIS?">
-			<a class="addthis_button_twitter"></a>
-			<a class="addthis_button_facebook"></a>
-			<a class="addthis_button_reddit"></a>
-			<a class="addthis_button_digg"></a>
-			<a class="addthis_button_email"></a>
-			<a class="addthis_button_compact"></a>
+		<a class="addthis_button_twitter" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_facebook" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_linkedin" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_digg" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_reddit" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_email" style="width: %; margin-right: 30px;"></a>
+		<a class="addthis_button_compact" style="width: %; margin-right: 30px;"></a>
+		
+		
+		<a href="http://AdviceShare.co/blog/"><img class="" style="width: %; margin-right: 30px;" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Twitter+Icon.png" /></a>
+		<a href="http://AdviceShare.co/blog/"><img class="" style="width: %; margin-right: 30px;" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png" /></a>
+		<a href="http://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=&source="><img class="" style="width: %; margin-right: 30px;" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/LinkedIn+Icon.png" /></a>
+		<a href="http://AdviceShare.co/blog/"><img style="width: %" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Google+Plus+Icon.png" /></a>
+
 		</div>
 			<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5283f0c4215e06a6"></script>
