--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -95,6 +95,17 @@ html,body {
   margin-top: -07px;
 }
 
+.roundShareLinks{
+  -moz-border-radius: 40%;
+    -webkit-border-radius: 40%;
+    border-radius: 40%;
+}
+.addthis_32x32_style{
+  -moz-border-radius: 40% important;
+    -webkit-border-radius: 40% important;
+    border-radius: 40% important;
+}
+
 .roundAuthorImage{
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -114,7 +125,8 @@ IMG.blogpostimage {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%; }
+    margin-top: -80px;
+    width: 40%; }
 
 .centerContent{
     margin-left: auto;
