--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -24,6 +24,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-44679032-2', 'adviceshare.co');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
 </script>
