--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -39,6 +39,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-44679032-1', 'adviceshare.co');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
 </script>
