Add Bit.ly Info

--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -6,6 +6,7 @@
     <meta property="og:url" content="www.AdviceShare.co" />
     <meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
     <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicon.png" />
+    <meta name="bitly-verification" content="146c41ae9b52"/>
 
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag "blogposts", media: "all",
